# PredictX-Encode-Hackathon

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .vercelignore  AI_SETUP.md  BACKEND_README.md  BACKEND_SETUP_COMPLETE.md  CONCORDIUM_MOCK_MODE_GUIDE.md  CONCORDIUM_MOCK_PAYLOAD_FIX.md  DEBUGGING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CONCORDIUM_WINDOWS.md  ENV_NEWSAPI_SETUP.md  ENV_SETUP.md  ENV_SETUP_GUIDE.md  FAVICON_SETUP.md  GEMINI_SETUP.md  GITHUB_SETUP.md  INSTALL_WSL_NOW.md  MILESTONE_2_COMPLETE.md  ONBOARDING_FIX_WALLET_ERROR.md  ONBOARDING_SETUP_COMPLETE.md  PRODUCTION_READINESS_CHECKLIST.md  PUSH_SUCCESS_SUMMARY.md  QUICK_RUN_GUIDE.md  QUICK_START.md  README.md  README_INSTALLATION.md  SETUP_GUIDE.md  START_BACKEND.bat  SUCCESS_SUMMARY.md  TRANSFORMATION_COMPLETE.md  (+23 more)
app/: critical.css  globals.css  layout.tsx  not-found.tsx  page.tsx
backend/: .gitignore  QUICK_START.md  README.md  deploy-backend.ps1  deploy-backend.sh  deploy-cors-fix.md  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  start-backend.bat  tsconfig.json
concordium-contracts/rg-registry/: Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOY_STEPS.md  QUICK_START.md  README.md  deploy.ps1  deploy.sh
concordium-contracts/rg-registry/src/: lib.rs
contracts/: .prettierignore  .prettierrc  README.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: AI_SETUP.md  BSC_CLEANUP_SUMMARY.md  CLEANUP_COMPLETE.md  (+56 more)
(+217 files in other folders)
